<resources>
    <string name="app_name">GymFiTech</string>
    <string name="waiting_for_data">Waiting for data...</string>
    <string name="write_to_firebase">Write to Firebase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="register_icon">register_icon</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="logout">Logout</string>
    <string name="useremail">userEmail</string>
    <string name="title_activity_workout_data">workout_data</string>
    <string name="large_text"></string>
    <string name="action_settings">Settings</string>
    <string name="loading_workout_data">Loading workout data...</string>
    <string name="avg_rom_text">Avg ROM: %1$s</string>
    <string name="go_to_workout">Go to workout</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="dumbbell_icon">Dumbbell Icon</string>
    <string name="time_icon">Time Icon</string>
    <string name="name">Name</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="height_placeholder">Height: %d cm</string>
    <string name="weight_placeholder">Weight: %d kg</string>
    <string name="height_default">Height: Not available</string>
    <string name="weight_default">Weight: Not available</string>
    <string name="default_username">Username</string>
    <string name="default_email">Email</string>
    <string name="range_of_motion">Range of motion</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="exercise">Exercise</string>
    <string name="workout_count">workout_count</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="username">username</string>
    <string name="rom">ROM</string>
    <string name="more_data">More Data</string>
    <string name="set_1">Set 1:</string>
    <string name="time">Time:</string>
    <string name="set_3">Set 3:</string>
    <string name="average_range_of_motion">Average Range Of Motion:</string>
    <string name="weight1">Weight:</string>
    <string name="workout_level">workout level</string>
    <string name="daily_tip">Daily tip</string>
    <string name="rate">rate</string>

</resources>