<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Login"
    tools:ignore="ExtraText">

    <!-- ImageView for icon -->
    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:src="@drawable/icon"
        android:contentDescription="icon_description"/>

    <!-- Login title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold" />


    <!-- Email input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:padding="20dp"
            android:inputType="textPassword"
            android:textColor="#000"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login"
        android:backgroundTint="@color/button_primary"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />



</LinearLayout>
